# tml-ctp

./: .coveragerc  .gitignore  .mailmap  .readthedocs.yaml  AsTRALSubjectBatcher.py  CTPDatechanger.py  DicomAnonymizer_Whitelist_extended.script  DicomAnonymizer_Whitelist_extended_randomSubjectID.script  Dockerfile_Bern  IterateNestedDatasetTagsDICOM.ipynb  LICENSE  Makefile  README.md  RelatedSeriesTagCleaning.py  batchSubjects.py  batchSubjectsMain_next.py  config.xml  config_pseudoBIDS.xml  delete_identifiable_DICOMs.py  force_delte_tags.py  get_container_name.py  get_version.py  pyproject.toml  setup.cfg  setup.py  space_deleter.py  update_readme.py
.github/workflows/: build-test-deploy.yml
ctp_dat_batcher/: info.py
ctp_dat_batcher/cli/: ctp_dat_batcher.py
dat_scripts/: DicomAnonymizer_Whitelist_extended.script  DicomAnonymizer_Whitelist_extended_randomSubjectID.script
data_preparation/: 0_data_preparation.py  1_process_images.py  process_images.py
docker/astral-ctp-anonymizer/: Dockerfile  entrypoint_anonymizer.sh
docker/ctp-anonymizer/: Dockerfile
docker/tml-ctp-anonymizer/: Dockerfile  entrypoint_anonymizer.sh
docs/source/: acknowledgments.rst  authors.rst  conf.py  contributing.rst  developer.rst  funding.rst  index.rst  installation.rst  license.rst  usage.rst
envs/: env_dev.yml
specific_versions/: DicomAnonymizer_Whitelist_extended_HM.script  README.md
tests/: conftest.py
tests/cli/: test_ctp_dat_batcher.py
tests/cli/utils/: test_clean_series_tags.py  test_delete_identifiable_dicoms.py
tests/data/: README.md
tests/data/PACSMANCohort/sub-PACSMAN1/ses-20231016/0001-NoSeriesDescription/: slice0.dcm  slice1.dcm  slice10.dcm  slice100.dcm  slice101.dcm  slice102.dcm  slice103.dcm  slice104.dcm  slice105.dcm  slice106.dcm  slice107.dcm  slice108.dcm  slice109.dcm  slice11.dcm  slice110.dcm  slice111.dcm  slice112.dcm  slice113.dcm  slice114.dcm  slice115.dcm  slice116.dcm  slice117.dcm  slice118.dcm  slice119.dcm  slice12.dcm  slice120.dcm  slice121.dcm  slice122.dcm  slice123.dcm  slice124.dcm  slice125.dcm  slice126.dcm  slice127.dcm  slice13.dcm  slice14.dcm  slice15.dcm  slice16.dcm  slice17.dcm  slice18.dcm  slice19.dcm  (+88 more)
tests/data/dat_scripts/: anonymizer.script
tests/data/pacsman-get-pseudonyms/: day_shift_PACSMANCohort.json  new_ids_PACSMANCohort.json
tml_ctp/: info.py
tml_ctp/cli/: ctp_dat_batcher.py
tml_ctp/cli/utils/: clean_series_tags.py  delete_identifiable_dicoms.py
utils/: clean_related_series_tags.py  ctp_date_changer.py  delete_identifiable_dicoms.py  force_delete_tags.py  space_deleter.py
