[metadata]
author = The TranslationalML Team
author_email = sebastien.tourbier@alumni.epfl.ch
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Topic :: Developers
    License :: OSI Approved 
    Programming Language :: Python :: 3.10
description = ctp_dat_batch: Python tool to batch anonymization of DICOM files with Dockerized CTP Dicom Anonymizer Tool
license = Apache License, Version 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://TranslationalML.github.io/datahipy
url = https://github.com/TranslationalML/dicom2elk

[options]
python_requires = >=3.10
install_requires =
    pydicom >= 2.4.3
    tqdm >= 4.66.1

test_requires =
    pytest
    pytest-console-scripts
    pytest-cov
    pytest-order >= 1.1.0

packages = find:

[options.exclude_package_data]
* = test

[options.extras_require]
doc =
    pydot >= 1.2.3
    sphinx >= 6.1.3
    sphinx-argparse == 0.4.0
    sphinx_rtd_theme == 1.2.0
    recommonmark == 0.7.1
    sphinxcontrib-apidoc == 0.3.0
    sphinxemoji == 0.2.0
    mock == 5.0.1
    m2r2 == 0.3.2
    docutils == 0.18.1
    commonmark == 0.9.1
    sphinxcontrib-mermaid == 0.9.2
dev =
    black ~= 22.3.0
    pre-commit
    isort ~= 5.10.1
docs =
    %(doc)s
test =
    pytest
    pytest-cov
    pytest-console-scripts
    pytest-env
    pandas
all =
    %(doc)s
    %(dev)s
    %(test)s

[options.package_data]
ctp_dat_batcher =
    VERSION

[options.entry_points]
console_scripts =
    ctp_dat_batcher=ctp_dat_batcher.cli.ctp_dat_batcher:main

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
    E203
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
python_files = test_* # all python files that starts with test_
python_classes = Test* # all python classes that starts with Test
python_functions = test_* # all python functions that starts with test_
