[metadata]
author = The TranslationalML Team
author_email = translationalML@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
description = Python tool to batch anonymization of DICOM files with Dockerized CTP Dicom Anonymizer Tool
license = Apache License, Version 2.0
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://github.com/TranslationalML/tml_ctp  # TODO: update with ReadTheDocs link when sphinx documentation is set up
url = https://github.com/TranslationalML/tml_ctp

[options]
python_requires = >=3.10
install_requires =
    pydicom == 2.4
    tqdm == 4.66

test_requires =
    pytest == 7.4
    pytest-console-scripts == 1.4
    pytest-cov == 4.1
    pytest-order == 1.2

packages = find:

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    pydot == 2.0
    sphinx == 7.2
    sphinx-argparse == 0.4
    sphinx_rtd_theme == 2.0
    recommonmark == 0.7
    sphinxcontrib-apidoc == 0.5
    sphinxcontrib-mermaid == 0.9
    sphinxemoji == 0.3
    mock == 5.1
    m2r2 == 0.3
    docutils == 0.20
    commonmark == 0.9
dev =
    black == 24.2
    pre-commit == 3.6
    isort == 5.13
docs =
    %(doc)s
test =
    pytest == 7.4
    pytest-console-scripts == 1.4
    pytest-cov == 4.1
    pytest-order == 1.2
all =
    %(doc)s
    %(dev)s
    %(test)s

[options.package_data]

[options.entry_points]
console_scripts =
    tml_ctp_dat_batcher=tml_ctp.cli.ctp_dat_batcher:main

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
    E203
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS
filterwarnings =
    ignore::DeprecationWarning
junit_family=xunit2
python_files = test_* # all python files that starts with test_
python_classes = Test* # all python classes that starts with Test
python_functions = test_* # all python functions that starts with test_
